workshop-app-promise/test/output/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-app
  name: my-app
  namespace: default
spec:
  ports:
  - name: "9000"
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: my-app
  type: NodePort
status:
  loadBalancer: {}
